@@ -30,6 +30,14 @@ class ExecuteProcedureTestSqlserver < ActiveRecord::TestCase
     assert results2.first['constraint_name']
     assert results2.first['constraint_type']
   end
+
+  should 'take named parameter arguments' do
+    tables = @klass.execute_procedure :sp_tables, :table_name => 'tables', :table_owner => 'sys'
+    table_info = tables.first
+    assert_equal 1, tables.size
+    assert_equal (ENV['ARUNIT_DB_NAME'] || 'activerecord_unittest'), table_info['TABLE_QUALIFIER'], "Table Info: #{table_info.inspect}"
+    assert_equal 'VIEW', table_info['TABLE_TYPE'], "Table Info: #{table_info.inspect}"
+  end
   
   
 end
